Fix auth when Supabase env missing

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
             <span class="btn-icon" aria-hidden="true">A/文</span>
             <span class="btn-label" id="langToggleLabel">中文</span>
           </button>
+          <span class="auth-user" id="authUser" hidden></span>
+          <button class="btn btn-ghost" type="button" id="loginBtn" data-i18n="actions.signIn">Sign in</button>
+          <button class="btn btn-ghost" type="button" id="logoutBtn" data-i18n="actions.signOut" hidden>Sign out</button>
           <button class="btn btn-primary" type="button" id="shareBtn">
             <span class="btn-icon" aria-hidden="true">↗</span>
             <span class="btn-label" data-i18n="actions.share">Share</span>
@@ -306,4 +309,3 @@
     </dialog>
   </body>
 </html>
-
